tests/build/cases/widget_new/when_missing_block.stderr
error: expected a when block expr and properties
 --> cases/widget_new/when_missing_block.rs:6:16
  |
6 |         when *#is_pressed
  |                ^^^^^^^^^^
